--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,15 @@
 }
 
 /* custom effect for the table */
+
+/* 맞춤형 추가 내용 */
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+}
+
+.small-text {
+  font-size: 14px;
+}
